welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:5: error: not found: value baissebrosse
       baissebrosse()
       ^SlugSnail:7: error: not found: value levebrosse
       levebrosse()
       ^