welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
     while (!estSurBiscuit){
       if (isFacingTrail(c)) {
       baissebrosse()
       avance()
       levebrosse()
     }
  		else {
        gauche()
      }
     }
 }

def isFacingTrail(c:Color):Boolean = {
  if (!estFaceMur){
    avance()  
  	if (getCouleurSol()==c){
      recule()
      return true
    }
  	else {
      recule()
      return false
    }
  	
  }
 	else {
    return false
  }
}
